Food Menu section is ready: get, post, put, delete
